# pacs-py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_workflow.py
src/pacs/: __init__.py  _types.py  _utils.py  annotation.py  cct.py  differential.py  estimation.py  io.py  testing.py
tests/: conftest.py  test_annotation.py  test_cct.py  test_differential.py  test_estimation.py  test_testing.py
tests/cross_validation/: cap_rates.csv  cct_input.csv  compare_python.py  design_matrix.csv  generate_and_run_r.R  metadata.csv  pic_matrix.csv  r_annotation_results.csv  r_by_t.csv  r_cct_results.csv  r_function_results.csv  r_logit_convergence.csv  r_logit_pvalues.csv  test_cells.csv
