[project]
name = "pacs-atac"
version = "0.1.0"
description = "PACS: Probabilistic model for Accessible Chromatin data in Single Cell - Python implementation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Zhen Miao", email = "zhenmiaonk@gmail.com"},
]
keywords = ["single-cell", "ATAC-seq", "snATAC-seq", "chromatin", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "formulaic>=0.6",
    "joblib>=1.1",
]

[project.optional-dependencies]
anndata = ["anndata>=0.8"]
dev = ["pytest>=7", "pytest-cov"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
